--- a/index.html
+++ b/index.html
@@ -8,29 +8,54 @@
   
   <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
+  <main class="main-page">
+    <div class="article-preview">
+      <div class="article-preview__box-image">
+        <img src="/images/drawers.jpg" alt="article-image" class="article-preview__image">
+      </div>
+      <div class="article-preview__box-text">
+        <h1 class="article-preview__tittle">
+          Shift the overall look and feel by adding these wonderful 
+          touches to furniture in your home
+        </h1>
+        <p class="article-preview__text">
+          Ever been in a room and felt like something was missing? Perhaps 
   it felt slightly bare and uninviting. I’ve got some simple tips 
   to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
+        </p>
+        <div class="author-article">
+          <div class="author-article__info">
+            <img src="./images/avatar-michelle.jpg" alt="author-image" class="author-article__image">
+            <div class="author-article__box-data">
+              <h1 class="author-article__name">Michelle Appleton</h1>
+              <span class="author-article__date">28 Jun 2020</span>
+            </div>
+          </div>
+          <div class="author-article__social-networks">
+            <button class="author-article__btn-social">
+              <img src="./images/icon-share.svg" alt="picture-share" class="author-article__icon">
+            </button>
+            <!--<div class="social-networks">
+              <span class="social-networks__text">Share</span>
+              <img src="" alt="" class="social-networks__image">
+              <img src="" alt="" class="social-networks__image">
+              <img src="" alt="" class="social-networks__image">
+            </div>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
