Changes to solution design component - CSS

--- a/index.html
+++ b/index.html
@@ -23,39 +23,47 @@
       <div class="article-preview__box-image">
         <img src="/images/drawers.jpg" alt="article-image" class="article-preview__image">
       </div>
-      <div class="article-preview__box-text">
-        <h1 class="article-preview__tittle">
-          Shift the overall look and feel by adding these wonderful 
-          touches to furniture in your home
-        </h1>
-        <p class="article-preview__text">
-          Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-        </p>
-        <div class="author-article">
-          <div class="author-article__info">
-            <img src="./images/avatar-michelle.jpg" alt="author-image" class="author-article__image">
-            <div class="author-article__box-data">
-              <h1 class="author-article__name">Michelle Appleton</h1>
-              <span class="author-article__date">28 Jun 2020</span>
+      <div class="article-preview__box-article">
+        <div class="article-preview__box-text">
+          <h1 class="article-preview__tittle">
+            Shift the overall look and feel by adding these wonderful 
+            touches to furniture in your home
+          </h1>
+          <p class="article-preview__text">
+            Ever been in a room and felt like something was missing? Perhaps 
+    it felt slightly bare and uninviting. I’ve got some simple tips 
+    to help you make any room feel complete.
+          </p>
+        </div>
+        <div class="article-preview__box-author">
+          <div class="author-article">
+            <div class="author-article__info">
+              <img src="./images/avatar-michelle.jpg" alt="author-image" class="author-article__image">
+              <div class="author-article__box-data">
+                <h1 class="author-article__name">Michelle Appleton</h1>
+                <span class="author-article__date">28 Jun 2020</span>
+              </div>
+            </div>
+            <div class="author-article__social-networks">
+              <div class="author-article__box-btn">
+                <button class="author-article__btn-social">
+                  <img src="./images/icon-share.svg" alt="picture-share" class="author-article__icon">
+                </button>
+              </div>
             </div>
           </div>
-          <div class="author-article__social-networks">
-            <button class="author-article__btn-social">
-              <img src="./images/icon-share.svg" alt="picture-share" class="author-article__icon">
-            </button>
-            <!--<div class="social-networks">
-              <span class="social-networks__text">Share</span>
-              <img src="" alt="" class="social-networks__image">
-              <img src="" alt="" class="social-networks__image">
-              <img src="" alt="" class="social-networks__image">
-            </div>-->
+          <div class="social-networks">
+            <span class="social-networks__text">Share</span>
+            <img src="./images/icon-facebook.svg" alt="picture-facebook" class="social-networks__image social-networks__image--margin">
+            <img src="./images/icon-twitter.svg" alt="picture-twitter" class="social-networks__image social-networks__image--margin">
+            <img src="./images/icon-pinterest.svg" alt="picture-pinterest" class="social-networks__image">
+            <div class="social-networks__start-option"></div>
           </div>
         </div>
       </div>
     </div>
   </main>
   
+  <script src="./js/script.js"></script>
 </body>
 </html>
