fixed bug image component - CSS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="main-page">
     <div class="article-preview">
       <div class="article-preview__box-image">
-        <img src="/images/drawers.jpg" alt="article-image" class="article-preview__image">
+        <img src="./images/drawers.jpg" alt="article-image" class="article-preview__image">
       </div>
       <div class="article-preview__box-article">
         <div class="article-preview__box-text">
