Initial refactory - CSS

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+  <!--Main page-->
   <main class="main-page">
+    <!--Component-->
     <div class="article-preview">
+      <!--first element-->
       <div class="article-preview__box-image">
         <img src="./images/drawers.jpg" alt="article-image" class="article-preview__image">
       </div>
+      <!--second element-->
       <div class="article-preview__box-article">
+        <!--text section-->
         <div class="article-preview__box-text">
           <h1 class="article-preview__tittle">
             Shift the overall look and feel by adding these wonderful 
@@ -35,23 +39,20 @@
     to help you make any room feel complete.
           </p>
         </div>
+        <!--author section-->
         <div class="article-preview__box-author">
+          <!--First block-->
           <div class="author-article">
-            <div class="author-article__info">
-              <img src="./images/avatar-michelle.jpg" alt="author-image" class="author-article__image">
-              <div class="author-article__box-data">
-                <h1 class="author-article__name">Michelle Appleton</h1>
-                <span class="author-article__date">28 Jun 2020</span>
-              </div>
+            <img src="./images/avatar-michelle.jpg" alt="author-image" class="author-article__image">
+            <div class="author-article__box-data">
+              <h1 class="author-article__name">Michelle Appleton</h1>
+              <span class="author-article__date">28 Jun 2020</span>
             </div>
-            <div class="author-article__social-networks">
-              <div class="author-article__box-btn">
-                <button class="author-article__btn-social">
-                  <img src="./images/icon-share.svg" alt="picture-share" class="author-article__icon">
-                </button>
-              </div>
-            </div>
+            <button class="author-article__btn-social">
+              <img src="./images/icon-share.svg" alt="picture-share" class="author-article__icon">
+            </button>
           </div>
+          <!--Second block-->
           <div class="social-networks">
             <span class="social-networks__text">Share</span>
             <img src="./images/icon-facebook.svg" alt="picture-facebook" class="social-networks__image social-networks__image--margin">
